Removed style tag from elements and moved it into the scss file and fixed height on character svgs so they aren't too big

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -3,9 +3,18 @@ $textColor: rgb(255,215,0);
 svg {
     display: block;
     margin: auto;
-    min-width: 300px;
-    max-width: 400px;
+    max-height: 75vh;
     outline: none;
+    
+    polygon:nth-child(1) {
+        fill: rgba(0, 0, 0, 0.6); 
+        stroke: black;
+        paint-order: stroke fill;
+    }
+
+    polygon:nth-child(2) {
+        fill: black;
+    }
 }
 
 .character {
